--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "@types/redux-mock-store": "^1.0.3",
     "@types/uuid": "^9.0.0",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.13.5",
     "react": "^18.2.0",
@@ -60,6 +60,7 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/react": "^13.4.0",
     "@types/react-router-dom": "^5.2.1",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
@@ -71,7 +72,11 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-storybook": "^0.6.10",
+    "fetch-mock": "^9.11.0",
+    "jest": "^29.4.1",
     "prop-types": "^15.8.1",
+    "react-test-renderer": "^18.2.0",
+    "redux-mock-store": "^1.5.4",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0"
   },
