--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "lint": "eslint . --ext .ts --ext .tsx",
     "lint-and-fix": "eslint . --ext .ts --ext .tsx --fix",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "e2e": "cypress open"
   },
   "browserslist": {
     "production": [
@@ -65,8 +66,10 @@
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "cypress": "^12.5.1",
     "eslint": "^8.29.0",
     "eslint-config-standard-with-typescript": "^24.0.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-promise": "^6.1.1",
