--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["jest", "node", "@types/testing-library__jest-dom"]
   },
   "include": [
     "src"
+  ],
+  "exclude": [
+    "node_modules", 
+    "cypress", 
+    "./cypress.config.ts"
   ]
 }
