--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
     "lint-and-fix": "eslint . --ext .ts --ext .tsx --fix",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "e2e": "cypress open"
+    "e2e": "cypress open",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "./",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -76,6 +79,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-storybook": "^0.6.10",
     "fetch-mock": "^9.11.0",
+    "gh-pages": "^5.0.0",
     "jest": "^29.4.1",
     "prop-types": "^15.8.1",
     "react-test-renderer": "^18.2.0",
