--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "@types/redux-mock-store": "^1.0.3",
     "@types/uuid": "^9.0.0",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.13.5",
     "react": "^18.2.0",
@@ -35,8 +35,12 @@
     "lint": "eslint . --ext .ts --ext .tsx",
     "lint-and-fix": "eslint . --ext .ts --ext .tsx --fix",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "e2e": "cypress open",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "./",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -60,18 +64,26 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/react": "^13.4.0",
     "@types/react-router-dom": "^5.2.1",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "cypress": "^12.5.1",
     "eslint": "^8.29.0",
     "eslint-config-standard-with-typescript": "^24.0.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-storybook": "^0.6.10",
+    "fetch-mock": "^9.11.0",
+    "gh-pages": "^5.0.0",
+    "jest": "^29.4.1",
     "prop-types": "^15.8.1",
+    "react-test-renderer": "^18.2.0",
+    "redux-mock-store": "^1.5.4",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0"
   },
